# SIGMOD2025

Code/: CMakeLists.txt  config.txt  main.cpp  readme.txt  result.txt
Code/ActiveRanking/: ActiveRanking.cpp  ActiveRanking.h
Code/GroundTruth/: Groundtruth.cpp  Groundtruth.h
Code/HDIA/: Piecewise_exhaustion.cpp  Piecewise_exhaustion.h
Code/Others/: pruning.cpp
Code/PreferenceLearning/: preferenceLearning.cpp  preferenceLearning.h
Code/RH/: RH.cpp  RH.h
Code/SinglePass/: singlePass.cpp  singlePass.h
Code/TDIA/: PI.cpp  PI.h
Code/UH/: UH.cpp  UH.h  frame.cpp
Code/input/: Anti2d100k.txt  Anti3d100k.txt  Anti4d100k.txt  adult.txt  law.txt
Code/output/: ext_pt.txt  hyperplane_data.txt
Code/structure/: Partition.cpp  Partition.h  choose_item.cpp  choose_item.h  define.h  halfspace_tree.cpp  halfspace_tree.h  hyperplane.cpp  hyperplane.h  hyperplane_set.cpp  hyperplane_set.h  interaction_tree.cpp  interaction_tree.h  point_set.cpp  point_set.h  point_t.cpp  point_t.h  u_vector.cpp
Data/: result.xlsx
